fixed input box from squishing on short devices

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -956,6 +956,7 @@
 
     .photo-search-input {
       margin-top: 8px;
+      min-height: 31px;
     }
 
     .photo-search-btn {
